--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/progettoCloud:latest ./application
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/musify-platform-app:latest ./application
 
     - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/progettoCloud:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/musify-platform-app:latest
