--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Google Auth
+      id: auth
+      uses: "google-github-actions/auth@v2"
+      with:
+        credentials_json: "${{ secrets.SA_ENVIRONMENT }}"
+
+    - name: "Set up Cloud SDK"
+      uses: "google-github-actions/setup-gcloud@v1"
+      
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
