--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         kubectl config set-cluster musify-platform-gke --server=https://127.0.0.1:8443
         kubectl config set-cluster musify-platform-gke --tls-server-name=$PRIVATE_IP_GKE_CLUSTER
 
-        gcloud compute ssh --zone "europe-west12" "gke-bastion-host" --tunnel-through-iap --project "musify-platform" -- -fNL 8443:$PRIVATE_IP_GKE_CLUSTER:443
+        gcloud compute ssh --zone "europe-west12-b" "gke-bastion-host" --tunnel-through-iap --project "musify-platform" -- -fNL 8443:$PRIVATE_IP_GKE_CLUSTER:443
 
     - name: Deploy
       run: |
