--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: musify-backend
-        image: IMAGE_NAME
+        image: $IMAGE_NAME
         ports:
         - containerPort: 8080
         env:
