--- a/application/package.json
+++ b/application/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "dotenv" : "^17.2.1"
   }
 }
